sfml-pong/build_fix/build_log.txt
[ 20%] Building CXX object CMakeFiles/cube.dir/src/cube.cpp.obj
C:\Users\Hayyan\Desktop\C++ Game\sfml-pong\src\cube.cpp: In function 'int main()':
C:\Users\Hayyan\Desktop\C++ Game\sfml-pong\src\cube.cpp:173:74: warning: ignoring return value of 'bool sf::Texture::loadFromImage(const sf::Image&, bool, const sf::IntRect&)', declared with attribute 'nodiscard' [-Wunused-result]
  173 |         sf::Image img = makeTopImage(texSize); atlas.topTex.loadFromImage(img);
      |                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from D:/Mysys2/mingw64/include/SFML/Graphics/Font.hpp:34,
                 from D:/Mysys2/mingw64/include/SFML/Graphics.hpp:36,
                 from C:\Users\Hayyan\Desktop\C++ Game\sfml-pong\src\cube.cpp:3:
D:/Mysys2/mingw64/include/SFML/Graphics/Texture.hpp:380:24: note: declared here
  380 |     [[nodiscard]] bool loadFromImage(const Image& image, bool sRgb = false, const IntRect& area = {});
      |                        ^~~~~~~~~~~~~
C:\Users\Hayyan\Desktop\C++ Game\sfml-pong\src\cube.cpp:174:66: warning: ignoring return value of 'bool sf::Texture::loadFromImage(const sf::Image&, bool, const sf::IntRect&)', declared with attribute 'nodiscard' [-Wunused-result]
  174 |         img = makeSideImage(texSize); atlas.sideTex.loadFromImage(img);
      |                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
D:/Mysys2/mingw64/include/SFML/Graphics/Texture.hpp:380:24: note: declared here
  380 |     [[nodiscard]] bool loadFromImage(const Image& image, bool sRgb = false, const IntRect& area = {});
      |                        ^~~~~~~~~~~~~
C:\Users\Hayyan\Desktop\C++ Game\sfml-pong\src\cube.cpp:175:66: warning: ignoring return value of 'bool sf::Texture::loadFromImage(const sf::Image&, bool, const sf::IntRect&)', declared with attribute 'nodiscard' [-Wunused-result]
  175 |         img = makeDirtImage(texSize); atlas.dirtTex.loadFromImage(img);
      |                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
D:/Mysys2/mingw64/include/SFML/Graphics/Texture.hpp:380:24: note: declared here
  380 |     [[nodiscard]] bool loadFromImage(const Image& image, bool sRgb = false, const IntRect& area = {});
      |                        ^~~~~~~~~~~~~
C:\Users\Hayyan\Desktop\C++ Game\sfml-pong\src\cube.cpp:667:17: error: 'terrainDirty' was not declared in this scope
  667 |             if (terrainDirty || terrainDL == 0) {
      |                 ^~~~~~~~~~~~
C:\Users\Hayyan\Desktop\C++ Game\sfml-pong\src\cube.cpp:667:33: error: 'terrainDL' was not declared in this scope; did you mean 'terrainSeed'?
  667 |             if (terrainDirty || terrainDL == 0) {
      |                                 ^~~~~~~~~
      |                                 terrainSeed
C:\Users\Hayyan\Desktop\C++ Game\sfml-pong\src\cube.cpp:712:24: error: 'terrainDL' was not declared in this scope; did you mean 'terrainSeed'?
  712 |             glCallList(terrainDL);
      |                        ^~~~~~~~~
      |                        terrainSeed
mingw32-make[3]: *** [CMakeFiles\cube.dir\build.make:78: CMakeFiles/cube.dir/src/cube.cpp.obj] Error 1
mingw32-make[2]: *** [CMakeFiles\Makefile2:121: CMakeFiles/cube.dir/all] Error 2
mingw32-make[1]: *** [CMakeFiles\Makefile2:128: CMakeFiles/cube.dir/rule] Error 2
mingw32-make: *** [Makefile:136: cube] Error 2
